@@ -4,11 +4,12 @@ import com.a301.newsseug.domain.member.model.entity.Subscribe;
 import com.a301.newsseug.domain.press.model.entity.Press;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import lombok.AccessLevel;
 import lombok.Builder;
 
-@Builder
-@Schema(name = "언론사 정보", description = "언론사 목록 조회시 노출할 정보.")
+@Builder(access = AccessLevel.PRIVATE)
+@Schema(name = "언론사 정보", description = "언론사 목록 조회 시 노출할 정보.")
 public record SimplePressDto(
 
         @Schema(description = "식별자")
@@ -33,7 +34,7 @@ public record SimplePressDto(
     public static List<SimplePressDto> fromSubscribe(List<Subscribe> subscribes) {
         return subscribes.stream()
                 .map(subscribe -> SimplePressDto.of(subscribe.getPress()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
